tests/neg/types.stk
fun even(x: Int): Bool = x % 2 == 0

fun double(n: Int): Bool = n + n // error

fun param(a: Int, a: Int): Int = a // error

fun test =

  var a: Int = 4
  val b: Int = false // error

  a = true     // error
  a = even 3   // error
  even false   // error

  if a then    // error
    val z: Bool = 4 // error
    3 p

  val x =
    if even 3 then   // error
      5
    else
      even 4


  if even 3 then
    5
  else
    even 4


  while a * 3 do    // error
    a p
